tests/miniJava/neg/006143_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { public if ( 0 ) { } else { } } }
